--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -4,6 +4,8 @@ le = env_gtk.Clone()
 mapsoft_libs = Split ("viewer gred geo_io geo loaders jeeps fig mp utils options 2d")
 other_libs   = Split ("usb tiff jpeg png gd curl proj")
 
+le.ParseConfig('pkg-config --cflags --libs cairomm-1.0,freetype2')
+
 le.Prepend(LIBS=[mapsoft_libs,other_libs])
 
 le.Library("viewer", Split ("""
@@ -12,7 +14,7 @@ le.Library("viewer", Split ("""
 	workplane.cpp
         """))
 
-le.Program("mapsoft_mapview", "mapsoft_mapview.cpp")
+le.Program("mapsoft_mapview.cpp")
 #le.Program('mapsoft_googleview', "mapsoft_googleview.cpp")
 #le.Program('mapsoft_ksview', "mapsoft_ksview.cpp")
 
