--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -2,7 +2,7 @@ Import ('env_gtk')
 le = env_gtk.Clone()
 
 mapsoft_libs = Split ("viewer gred geo_io geo loaders jeeps fig mp utils options 2d")
-other_libs   = Split ("usb tiff jpeg png gd curl proj")
+other_libs   = Split ("usb tiff jpeg png curl proj")
 
 le.ParseConfig('pkg-config --cflags --libs cairomm-1.0,freetype2')
 
