--- a/programs/SConscript
+++ b/programs/SConscript
@@ -2,7 +2,7 @@ Import ('env')
 env_geo = env.Clone()
 
 mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils options 2d")
-other_libs   = Split ("usb tiff jpeg png gd curl proj")
+other_libs   = Split ("usb tiff jpeg png curl proj")
 
 env_geo.Prepend(LIBS=[mapsoft_libs, other_libs])
 env_geo.ParseConfig('pkg-config --cflags --libs cairomm-1.0,freetype2')
