--- a/misc/bigmap/SConscript
+++ b/misc/bigmap/SConscript
@@ -1,6 +1,8 @@
-Import('env')
-
 libs=Split("loaders options 2d jpeg tiff png")
 
-env.Program(["map4.cpp", "libbm.cpp"], LIBS=[libs])
-env.Program(["map6.cpp", "libbm.cpp"], LIBS=[libs])
+Import('env')
+e=env.Clone()
+e.Prepend(LIBS=[libs])
+
+e.Program(["map4.cpp", "libbm.cpp"])
+e.Program(["map6.cpp", "libbm.cpp"])
