--- a/misc/tim/SConscript
+++ b/misc/tim/SConscript
@@ -1,10 +1,9 @@
-Import('env')
 
 mapsoft_libs = Split("geo_io geo loaders fig mp utils options 2d jeeps")
 other_libs   = Split ("usb tiff jpeg png curl proj")
 
-e=env.Clone()
-e.ParseConfig('pkg-config --cflags --libs cairomm-1.0,freetype2')
+Import('env_cairo')
+e=env_cairo.Clone()
 e.Prepend(LIBS=[mapsoft_libs, other_libs])
 
 map (lambda(f): e.Program(f+'.cpp'),\
