--- a/programs/SConscript
+++ b/programs/SConscript
@@ -1,11 +1,11 @@
-Import ('env')
-env_geo = env.Clone()
 
 mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils options 2d")
 other_libs   = Split ("usb tiff jpeg png curl proj")
 
+Import ('env_cairo')
+Import ('env')
+env_geo = env_cairo.Clone()
 env_geo.Prepend(LIBS=[mapsoft_libs, other_libs])
-env_geo.ParseConfig('pkg-config --cflags --libs cairomm-1.0,freetype2')
 
 map (lambda(f): env_geo.Program(f+'.cpp'),\
   Split("""
