--- a/vector/vmap3/SConscript
+++ b/vector/vmap3/SConscript
@@ -1,11 +1,12 @@
-Import ('env')
 
 mapsoft_libs=Split("vmap mp fig geo_io geo loaders utils options 2d")
 other_libs=Split("proj png jpeg tiff yaml")
 
-env1 = env.Clone()
+Import ('env_cairo')
+e = env_cairo.Clone()
+e.Prepend(LIBS=["vmap_renderer", mapsoft_libs,other_libs])
 
-env1.Library('vmap_renderer',\
+e.Library('vmap_renderer',\
   Split ("""
     vmap_rend_cnt.cpp
     vmap_rend_txt.cpp
@@ -13,10 +14,7 @@ env1.Library('vmap_renderer',\
     vmap_renderer.cpp
   """))
 
-env1.Prepend(LIBS=["vmap_renderer", mapsoft_libs,other_libs])
-env1.ParseConfig('pkg-config --cflags --libs cairomm-1.0,freetype2')
-
-env1.Program("vmap_copy.cpp")
-env1.Program("vmap_render.cpp")
-env1.Program("vmap_mmb_filter.cpp")
+e.Program("vmap_copy.cpp")
+e.Program("vmap_render.cpp")
+e.Program("vmap_mmb_filter.cpp")
 
