--- a/tests/SConscript
+++ b/tests/SConscript
@@ -2,6 +2,7 @@ Import ('env')
 
 subdirs = Split ("""
     2d_rectcrop
+    geo_nom
   """)
 
 SConscript (map (lambda(s): s+"/SConscript", subdirs))
