move viewer and programs to pkg-config

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -1,13 +1,11 @@
-
-mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils options 2d")
-other_libs   = Split ("usb tiff jpeg png curl proj")
-
-Import ('env_cairo')
 Import ('env')
-env_geo = env_cairo.Clone()
-env_geo.Prepend(LIBS=[mapsoft_libs, other_libs])
 
-map (lambda(f): env_geo.Program(f+'.cpp'),\
+e=env.Clone()
+e['ENV']['PKG_CONFIG_PATH'] = "../core/pc"
+e.ParseConfig('pkg-config --cflags --libs geo_io mp')
+
+
+map (lambda(f): e.Program(f+'.cpp'),\
   Split("""
     mapsoft_add2fig
     mapsoft_convert
