--- a/vector/vmap3/SConscript
+++ b/vector/vmap3/SConscript
@@ -1,7 +1,7 @@
 Import ('env')
 e = env.Clone()
 
-e.ParseConfig('pkg-config --cflags --libs vmap')
+e.UseLibs('vmap')
 
 e.Prepend(LIBS=["vmap_renderer"])
 e.Library('vmap_renderer',\
