--- a/core/geo_io/SConscript
+++ b/core/geo_io/SConscript
@@ -1,5 +1,7 @@
-Import ('env_cairo')
-e=env_cairo.Clone()
+Import ('env')
+e=env.Clone()
+e.ParseConfig('pkg-config --cflags --libs cairomm-1.0')
+
 
 e.Library('geo_io', \
     Split ("""
