--- a/tests/geo_nom/SConscript
+++ b/tests/geo_nom/SConscript
@@ -1,4 +1,5 @@
 Import('env')
+e=env.Clone()
+e.ParseConfig('pkg-config --cflags --libs geo')
 
-libs=Split("geo 2d")
-env.Program("geo_nom_test.cpp",  LIBS=[libs])
+e.Program("geo_nom_test.cpp")
