--- a/core/utils/tests/SConscript
+++ b/core/utils/tests/SConscript
@@ -1,7 +1,9 @@
 Import ('env')
 le = env.Clone()
 
-le.Program('generic_accessor_unittest', 'generic_accessor_unittest.cpp', LIBS=['utils'])
-le.Program('cache_test', 'cache_test.cpp', LIBS=['utils'])
-# le.Program('options_test', 'options_test.cpp', LIBS=['utils'])
+le.ParseConfig('pkg-config --cflags --libs utils')
+
+le.Program('generic_accessor_unittest', 'generic_accessor_unittest.cpp')
+le.Program('cache_test', 'cache_test.cpp')
+# le.Program('options_test', 'options_test.cpp')
 
