--- a/misc/fig_mod/SConscript
+++ b/misc/fig_mod/SConscript
@@ -1,10 +1,6 @@
-
-mapsoft_libs=Split("geo_io geo loaders fig utils options 2d jeeps")
-other_libs=Split("proj png jpeg tiff")
-
 Import('env')
 e=env.Clone()
-e.Prepend(LIBS=[mapsoft_libs, other_libs])
+e.ParseConfig('pkg-config --cflags --libs geo_io fig')
 
 e.Program("fig_crop.cpp")
 e.Program("fig_ref_mod.cpp")
