--- a/misc/mp_bboxes/SConscript
+++ b/misc/mp_bboxes/SConscript
@@ -1,8 +1,6 @@
-mapsoft_libs=Split("mp utils 2d")
-
 Import('env')
 e=env.Clone()
-e.Prepend(LIBS=[mapsoft_libs])
+e.ParseConfig('pkg-config --cflags --libs mp utils')
 
 e.Program(["mp_bboxes.cpp"])
 e.Program('mp_bboxes2.cpp')
