--- a/misc/ps/SConscript
+++ b/misc/ps/SConscript
@@ -1,9 +1,6 @@
-mapsoft_libs=Split("vmap geo_io geo loaders fig mp utils options 2d jeeps")
-other_libs=Split("proj png jpeg tiff yaml")
-
 Import('env')
 e=env.Clone()
-e.Prepend(LIBS=[mapsoft_libs, other_libs])
+e.ParseConfig('pkg-config --cflags --libs vmap')
 
 e.Program('fig2ps.cpp')
 
