--- a/misc/srtm_pics/SConscript
+++ b/misc/srtm_pics/SConscript
@@ -1,10 +1,6 @@
-
-mapsoft_libs=Split("geo_io geo loaders utils options 2d jeeps")
-other_libs=Split("proj png jpeg tiff")
-
 Import('env')
 e=env.Clone()
-e.Prepend(LIBS=[mapsoft_libs, other_libs])
+e.ParseConfig('pkg-config --cflags --libs geo_io')
 
 e.Program("srtm_pic.cpp")
 
