--- a/core/geo_io/SConscript
+++ b/core/geo_io/SConscript
@@ -1,6 +1,6 @@
 Import ('env')
 e=env.Clone()
-e.ParseConfig('pkg-config --cflags --libs cairomm-1.0')
+e.ParseConfig('pkg-config --cflags --libs utils')
 
 
 e.Library('geo_io', \
