--- a/core/utils/tests/SConscript
+++ b/core/utils/tests/SConscript
@@ -1,7 +1,7 @@
 Import ('env')
 le = env.Clone()
 
-le.ParseConfig('pkg-config --cflags --libs utils')
+le.UseLibs('utils')
 
 le.Program('generic_accessor_unittest', 'generic_accessor_unittest.cpp')
 le.Program('cache_test', 'cache_test.cpp')
