--- a/misc/bigmap/SConscript
+++ b/misc/bigmap/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 e=env.Clone()
-e.ParseConfig('pkg-config --cflags --libs loaders')
+e.UseLibs('loaders')
 
 e.Program(["map4.cpp", "libbm.cpp"])
 e.Program(["map6.cpp", "libbm.cpp"])
