--- a/misc/srtm_pics/SConscript
+++ b/misc/srtm_pics/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 e=env.Clone()
-e.ParseConfig('pkg-config --cflags --libs geo_io')
+e.UseLibs('geo_io')
 
 e.Program("srtm_pic.cpp")
 
