--- a/misc/vmap2/SConscript
+++ b/misc/vmap2/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 e=env.Clone()
-e.ParseConfig('pkg-config --cflags --libs vmap')
+e.UseLibs('vmap')
 e.Prepend(LIBS=["vmap2"])
 
 e.Library('vmap2', \
