--- a/programs/SConscript
+++ b/programs/SConscript
@@ -1,7 +1,7 @@
 Import ('env')
 
 e=env.Clone()
-e.ParseConfig('pkg-config --cflags --libs geo_io mp')
+e.UseLibs('geo_io mp')
 
 
 map (lambda(f): e.Program(f+'.cpp'),\
