--- a/tests/2d_rectcrop/SConscript
+++ b/tests/2d_rectcrop/SConscript
@@ -1,7 +1,7 @@
 Import('env')
 e=env.Clone()
 
-e.ParseConfig('pkg-config --cflags --libs fig')
+e.UseLibs('fig')
 
 e.Program("rectcrop.cpp")
 e.Program("crop_ml.cpp")
