--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -1,7 +1,7 @@
 Import ('env')
 
 e=env.Clone()
-e.ParseConfig('pkg-config --cflags --libs gred geo_io mp')
+e.UseLibs('gred geo_io mp')
 
 e.Library("viewer", Split ("""
         generic_dialog.cpp
