--- a/core/geo_io/SConscript
+++ b/core/geo_io/SConscript
@@ -1,16 +1,17 @@
-Import ('env_cairo')
-e=env_cairo.Clone()
+Import ('env')
+e=env.Clone()
 
-e.Library('geo_io', \
-    Split ("""
-    filters.cpp
-    io.cpp
-    io_gps.cpp
-    io_gu.cpp
-    io_kml.cpp
-    io_oe.cpp
-    io_xml.cpp
-    o_img.cpp
-    o_tiles.cpp
-    geofig.cpp
-     """))
+e.MLib('geo_io',
+       srcs = Split ("""
+                     filters.cpp
+                     io.cpp
+                     io_gps.cpp
+                     io_gu.cpp
+                     io_kml.cpp
+                     io_oe.cpp
+                     io_xml.cpp
+                     o_img.cpp
+                     o_tiles.cpp
+                     geofig.cpp
+                     """),
+       deps = ['cairo'])
