Simplified SConscripts a little

--- a/vector/data/SConscript
+++ b/vector/data/SConscript
@@ -10,28 +10,28 @@ e.UseLibs('vmap')
 #### Method for cnf 2 fig conversion
 def Cnf2Fig(env, name):
    """Setup command for cnf2fig conversion by <name> argument"""
-   cmd = env.Command(name+'.fig', name+'.cnf', "./zn_legend %s > %s.fig" % (name, name), chdir = os.getcwd())
+   cmd = env.Command(name+'.fig', name+'.cnf', "./zn_legend %s > %s.fig" % (name, name), chdir = 1)
    env.Depends(cmd, 'zn_legend')
 e.AddMethod(Cnf2Fig)
 
 #### Method for fig 2 conv conversion
 def Fig2Conv(env, name):
    """Setup command for fig2conv conversion by <name> argument"""
-   cmd = env.Command(name+'.conv.fig', name+'.fig', "../libzn-utils/get_print %s.fig %s.conv.fig" % (name, name), chdir = os.getcwd())
+   cmd = env.Command(name+'.conv.fig', name+'.fig', "../libzn-utils/get_print %s.fig %s.conv.fig" % (name, name), chdir = 1)
    env.Depends(cmd, '../libzn-utils/get_print')
 e.AddMethod(Fig2Conv)
 
 #### Method for fig 2 png conversion
 def Fig2Png(env, name):
    """Setup command for fig2png conversion by <name> argument"""
-   cmd = env.Command(name+'.png', name+'.fig', "LANG=ru_RU.KOI8-R ../libzn-utils/fig2pnm %s.fig | pnmtopng > %s.png" % (name, name), chdir = os.getcwd())
+   cmd = env.Command(name+'.png', name+'.fig', "LANG=ru_RU.KOI8-R ../libzn-utils/fig2pnm %s.fig | pnmtopng > %s.png" % (name, name), chdir = 1)
    env.Depends(cmd, '../libzn-utils/fig2pnm')
 e.AddMethod(Fig2Png)
 
 #### Method for figlib creation
 def Figlib(env, name):
    """Setup command for figlib creation by <name> argument"""
-   cmd = env.Command(name+'_fig/', name+'.cnf', "rm -f -- %s_fig; ./zn_figlib %s %s_fig" % (name, name, name), chdir = os.getcwd())
+   cmd = env.Command(name+'_fig/', name+'.cnf', "rm -f -- %s_fig; ./zn_figlib %s %s_fig" % (name, name, name), chdir = 1)
    env.Clean(cmd, name+'_fig')
    env.Depends(cmd, 'zn_figlib')
 e.AddMethod(Figlib)
