--- a/core/options/SConscript
+++ b/core/options/SConscript
@@ -1,10 +1,11 @@
 Import ('env')
 
-env.Library('options', \
-  Split("""
-    options.cpp
-    read_conf.cpp
-    m_time.cpp m_color.cpp
-    strvec.cpp
-    m_getopt.cpp
-  """))
+env.MLib('options',
+         srcs = Split("""
+                      options.cpp
+                      read_conf.cpp
+                      m_time.cpp
+                      m_color.cpp
+                      strvec.cpp
+                      m_getopt.cpp
+                      """))
