--- a/core/utils/SConscript
+++ b/core/utils/SConscript
@@ -1,12 +1,14 @@
-Import ('env_cairo')
-e=env_cairo.Clone()
+Import ('env')
+e=env.Clone()
 
-e.Library('utils', \
-  Split("""
-    log.cpp
-    iconv_utils.cpp spirit_utils.cpp
-    pnm_shifter.cpp
-    cairo_wrapper.cpp
-  """))
+e.MLib('utils',
+       srcs = Split("""
+                    log.cpp
+                    iconv_utils.cpp
+                    spirit_utils.cpp
+                    pnm_shifter.cpp
+                    cairo_wrapper.cpp
+                    """),
+       deps = ['cairo'])
 
 SConscript ("tests/SConscript")
