--- a/core/jeeps/SConscript
+++ b/core/jeeps/SConscript
@@ -1,28 +1,31 @@
 Import ('env')
 env.MLib('jeeps',
          srcs = Split ("""
-                       gpsapp.c
-                       gpscom.c
-                       gpsdatum.c
-                       gpsdevice.c
-                       gpsdevice_ser.c
-                       gpsdevice_usb.c
-                       gpsfmt.c
-                       gpsinput.c
-                       gpslibusb.c
-                       gpsmath.c
-                       gpsmem.c
-                       gpsproj.c
-                       gpsprot.c
-                       gpsread.c
-                       gpsrqst.c
-                       gpssend.c
-                       gpsserial.c
-                       gpsusbcommon.c
-                       gpsusbread.c
-                       gpsusbsend.c
-                       gpsusbstub.c
-                       gpsusbwin.c
-                       gpsutil.c
-                       utils.c
-                       """))
+                  gpsapp.c
+                  gpscom.c
+                  gpsdatum.c
+                  gpsdevice.c
+                  gpsdevice_ser.c
+                  gpsdevice_usb.c
+                  gpsfmt.c
+                  gpsinput.c
+                  gpslibusb.c
+                  gpsmath.c
+                  gpsmem.c
+                  gpsproj.c
+                  gpsprot.c
+                  gpsread.c
+                  gpsrqst.c
+                  gpssend.c
+                  gpsserial.c
+                  gpsusbcommon.c
+                  gpsusbread.c
+                  gpsusbsend.c
+                  gpsusbstub.c
+                  gpsusbwin.c
+                  gpsutil.c
+                  utils.c
+                  """),
+         deps = Split("""
+                  libusb
+                  """))
