--- a/core/geo_io/SConscript
+++ b/core/geo_io/SConscript
@@ -3,15 +3,23 @@ e=env.Clone()
 
 e.MLib('geo_io',
        srcs = Split ("""
-                     filters.cpp
-                     io.cpp
-                     io_gps.cpp
-                     io_gu.cpp
-                     io_kml.cpp
-                     io_oe.cpp
-                     io_xml.cpp
-                     o_img.cpp
-                     o_tiles.cpp
-                     geofig.cpp
-                     """),
-       deps = ['cairo'])
+                filters.cpp
+                io.cpp
+                io_gps.cpp
+                io_gu.cpp
+                io_kml.cpp
+                io_oe.cpp
+                io_xml.cpp
+                o_img.cpp
+                o_tiles.cpp
+                geofig.cpp
+                """),
+       deps = Split("""
+                2d
+                fig
+                geo
+                jeeps
+                loaders
+                options
+                utils
+                cairo"""))
