--- a/core/utils/SConscript
+++ b/core/utils/SConscript
@@ -3,12 +3,16 @@ e=env.Clone()
 
 e.MLib('utils',
        srcs = Split("""
-                    log.cpp
-                    iconv_utils.cpp
-                    spirit_utils.cpp
-                    pnm_shifter.cpp
-                    cairo_wrapper.cpp
-                    """),
-       deps = ['cairo'])
+                log.cpp
+                iconv_utils.cpp
+                spirit_utils.cpp
+                pnm_shifter.cpp
+                cairo_wrapper.cpp
+                """),
+       deps = ['2d',
+               'geo',
+               'loaders',
+               'options',
+               'cairo'])
 
 SConscript ("tests/SConscript")
