--- a/vector/vmap3/SConscript
+++ b/vector/vmap3/SConscript
@@ -3,12 +3,18 @@ e = env_cairo.Clone()
 
 e.MLib('vmap_renderer',
        srcs = Split("""
-                    vmap_rend_cnt.cpp
-                    vmap_rend_txt.cpp
-                    vmap_rend_pic.cpp
-                    vmap_renderer.cpp
-                    """),
-       deps = [])
+                vmap_rend_cnt.cpp
+                vmap_rend_txt.cpp
+                vmap_rend_pic.cpp
+                vmap_renderer.cpp
+                """),
+       deps = Split("""
+                2d
+                geo
+                geo_io
+                vmap
+                cairo
+                """))
 
 #       Split("""
 #                    vmap mp fig geo_io geo loaders utils options 2d
